// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`failed 1`] = `
.c2 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
}

.c2 a {
  color: #FFFFFF;
}

.c0 {
  box-sizing: border-box;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 24px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    Configure Resource
  </div>
  <div
    class="c2"
    kind="danger"
  >
    some error message
  </div>
</div>
`;

exports[`polling error state 1`] = `
.c0 {
  box-sizing: border-box;
}

.c7 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c13 {
  box-sizing: border-box;
  margin-top: 24px;
}

.c8 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c8:active {
  opacity: 0.56;
}

.c8:hover,
.c8:focus {
  background: #651FFF;
}

.c8:active {
  background: #354AA4;
}

.c8:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: none;
  text-transform: none;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-left: 8px;
}

.c11:active {
  opacity: 0.56;
}

.c11:hover,
.c11:focus {
  background: none;
  text-decoration: underline;
}

.c11:disabled {
  background: none;
  color: rgba(255,255,255,0.3);
}

.c14 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
  width: 165px;
}

.c14:active {
  opacity: 0.56;
}

.c14:hover,
.c14:focus {
  background: #651FFF;
}

.c14:active {
  background: #354AA4;
}

.c14:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c15 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 16px;
  width: 165px;
}

.c15:active {
  opacity: 0.56;
}

.c15:hover,
.c15:focus {
  background: #651FFF;
}

.c15:active {
  background: #354AA4;
}

.c15:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c10 {
  display: inline-block;
  transition: color 0.3s;
  margin-left: 4px;
  color: #f50057;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 24px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 16px;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c5 {
  box-sizing: border-box;
  margin-bottom: 4px;
  margin-top: 8px;
  padding: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c6 {
  box-sizing: border-box;
  margin-right: 8px;
  display: flex;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  display: flex;
  align-items: center;
}

.c9 .icon {
  margin-right: 8px;
}

.c3 {
  box-sizing: border-box;
  padding: 16px;
  border-radius: 8px;
  max-width: 800px;
  background-color: rgba(255,255,255,0.05);
  border: 2px solid #f50057;
}

.c12 {
  color: #03a9f4;
  font-weight: normal;
  padding-left: 2px;
  font-size: inherit;
  min-height: auto;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    Configure Resource
  </div>
  <div
    class="c2"
  >
    Use below script to add a server to your cluster. This script will install the Teleport agent to provide secure access to your server.
  </div>
  <div
    class="c3"
  >
    <div
      class="c4"
    >
      Script
    </div>
    <div
      class="c5"
    >
      <div
        class="c6"
        style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
      >
        <div
          class="c7"
        >
          $
        </div>
        <div>
          sudo bash -c "$(curl -fsSL http://localhost/scripts/some-join-token-hash/install-node.sh)"
        </div>
      </div>
      <button
        class="c8"
        kind="primary"
        style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
      >
        Copy
      </button>
    </div>
    <div
      class="c9"
    >
      <span
        class="c10 icon icon-warning "
        color="danger"
      />
      Timeout, script expired
       
      <button
        class="c11 c12"
        kind="text"
      >
        Regenerate Script
      </button>
    </div>
  </div>
  <div
    class="c13"
  >
    
    <button
      class="c14"
      disabled=""
      kind="primary"
      width="165px"
    >
      Next
    </button>
    <a
      class="c15"
      href="/web"
      kind="primary"
      mt="3"
      theme="[object Object]"
      width="165px"
    >
      Exit
    </a>
  </div>
</div>
`;

exports[`polling state 1`] = `
.c0 {
  box-sizing: border-box;
}

.c7 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c11 {
  box-sizing: border-box;
  margin-top: 24px;
}

.c8 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c8:active {
  opacity: 0.56;
}

.c8:hover,
.c8:focus {
  background: #651FFF;
}

.c8:active {
  background: #354AA4;
}

.c8:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c12 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
  width: 165px;
}

.c12:active {
  opacity: 0.56;
}

.c12:hover,
.c12:focus {
  background: #651FFF;
}

.c12:active {
  background: #354AA4;
}

.c12:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 16px;
  width: 165px;
}

.c13:active {
  opacity: 0.56;
}

.c13:hover,
.c13:focus {
  background: #651FFF;
}

.c13:active {
  background: #354AA4;
}

.c13:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c10 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  font-size: 18px;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 24px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 16px;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c5 {
  box-sizing: border-box;
  margin-bottom: 4px;
  margin-top: 8px;
  padding: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c6 {
  box-sizing: border-box;
  margin-right: 8px;
  display: flex;
}

.c3 {
  box-sizing: border-box;
  padding: 16px;
  border-radius: 8px;
  max-width: 800px;
  background-color: rgba(255,255,255,0.05);
  border: 2px solid #2F3659;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  display: flex;
  align-items: center;
  white-space: pre;
}

.c9 .icon {
  margin-right: 8px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    Configure Resource
  </div>
  <div
    class="c2"
  >
    Use below script to add a server to your cluster. This script will install the Teleport agent to provide secure access to your server.
  </div>
  <div
    class="c3"
  >
    <div
      class="c4"
    >
      Script
    </div>
    <div
      class="c5"
    >
      <div
        class="c6"
        style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
      >
        <div
          class="c7"
        >
          $
        </div>
        <div>
          sudo bash -c "$(curl -fsSL http://localhost/scripts/some-join-token-hash/install-node.sh)"
        </div>
      </div>
      <button
        class="c8"
        kind="primary"
        style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
      >
        Copy
      </button>
    </div>
    <div
      class="c9"
    >
      <span
        class="c10 icon icon-restore "
        color="light"
        font-size="4"
      />
      Waiting for node   |   05:00 minutes until this script expires
    </div>
  </div>
  <div
    class="c11"
  >
    
    <button
      class="c12"
      disabled=""
      kind="primary"
      width="165px"
    >
      Next
    </button>
    <a
      class="c13"
      href="/web"
      kind="primary"
      mt="3"
      theme="[object Object]"
      width="165px"
    >
      Exit
    </a>
  </div>
</div>
`;

exports[`polling success state 1`] = `
.c0 {
  box-sizing: border-box;
}

.c7 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c11 {
  box-sizing: border-box;
  margin-top: 24px;
}

.c8 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c8:active {
  opacity: 0.56;
}

.c8:hover,
.c8:focus {
  background: #651FFF;
}

.c8:active {
  background: #354AA4;
}

.c8:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c12 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
  width: 165px;
}

.c12:active {
  opacity: 0.56;
}

.c12:hover,
.c12:focus {
  background: #651FFF;
}

.c12:active {
  background: #354AA4;
}

.c12:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 16px;
  width: 165px;
}

.c13:active {
  opacity: 0.56;
}

.c13:hover,
.c13:focus {
  background: #651FFF;
}

.c13:active {
  background: #354AA4;
}

.c13:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c10 {
  display: inline-block;
  transition: color 0.3s;
  margin-left: 4px;
  color: #00bfa5;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 24px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 16px;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c5 {
  box-sizing: border-box;
  margin-bottom: 4px;
  margin-top: 8px;
  padding: 8px;
  background-color: #010B1C;
  border-radius: 4px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c6 {
  box-sizing: border-box;
  margin-right: 8px;
  display: flex;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  display: flex;
  align-items: center;
}

.c9 .icon {
  margin-right: 8px;
}

.c3 {
  box-sizing: border-box;
  padding: 16px;
  border-radius: 8px;
  max-width: 800px;
  background-color: rgba(255,255,255,0.05);
  border: 2px solid #00bfa5;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    Configure Resource
  </div>
  <div
    class="c2"
  >
    Use below script to add a server to your cluster. This script will install the Teleport agent to provide secure access to your server.
  </div>
  <div
    class="c3"
  >
    <div
      class="c4"
    >
      Script
    </div>
    <div
      class="c5"
    >
      <div
        class="c6"
        style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
      >
        <div
          class="c7"
        >
          $
        </div>
        <div>
          sudo bash -c "$(curl -fsSL http://localhost/scripts/some-join-token-hash/install-node.sh)"
        </div>
      </div>
      <button
        class="c8"
        kind="primary"
        style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
      >
        Copy
      </button>
    </div>
    <div
      class="c9"
    >
      <span
        class="c10 icon icon-checkmark-circle "
        color="success"
      />
      Successfully executed
    </div>
  </div>
  <div
    class="c11"
  >
    
    <button
      class="c12"
      kind="primary"
      width="165px"
    >
      Next
    </button>
    <a
      class="c13"
      href="/web"
      kind="primary"
      mt="3"
      theme="[object Object]"
      width="165px"
    >
      Exit
    </a>
  </div>
</div>
`;
